# LatentMesh

./: .gitignore  LICENSE  README.md  RESOURCES.md  TODO.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
docs/: architecture.md  benchmarks.html  deep-dive.md  development-status.md  docs.html  extract_docs.js  index.html  legacy_index.html  legacy_script.js  legacy_styles.css  overview.md  package-lock.json  package.json
docs/api-ref/: core.md  graph.md  primitives.md
docs/assets/: app.js  styles.css
docs/src/: App.jsx
docs/src/pages/: ApiDocs.jsx  Demo.jsx  Home.jsx
docs/src/styles/: api-styles.css  demo.css  index.css
examples/: README.md  common.py  complex.py  hierarchical.py  sequential.py  voting.py
examples/guides/: claude_cli_local.md  langgraph_rag.md  one_gpu_hf.md
examples/hf/: 01_deepseek_r1_single_agent.py  02_llama31_single_agent.py  03_deepseek_r1_multi_stage.py  04_memory_seeded_support_agent.py  05_batch_eval.py
examples/integrations/: 11_langgraph_as_node.py  12_langgraph_rag.py  13_langchain_openai_client.py  14_openai_sdk_client.py  15_claude_mcp_server.py
examples/ollama/: 06_ollama_llama_local.py  07_ollama_multi_stage_retrieval.py
examples/ops/: 15_health_probe.py  16_concurrent_smoke.py  17_jsonl_batch_client.py
examples/serving/: 08_serve_openai.py  09_serve_unified.py  10_client_smoke_openai.py
latentmesh/: __init__.py  core.py  graph.py  model.py  persistent_cache.py  primitives.py  serve.py  server.py  workflow.py
latentmesh/examples/: benchmark_runner.py  langchain_ollama_example.py  langchain_transformers_example.py  langserve_server.py  openai_server.py  quickstart.py
research/: compute_basis.py  compute_calibration.py  latent_cache.py  latent_llm_poc.py  run_demo.py
tests/: fakes.py  test_core.py  test_graph.py  test_integration.py  test_model.py  test_primitives.py  test_public_api.py  test_runnable.py  test_serialization.py  test_serve_gateway.py  test_workflow_builder.py  test_workflow_runtime.py
