[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latentmesh"
version = "0.1.0"
description = "LangGraph-first latent-space workflow framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "LatentMesh Authors" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "numpy>=1.24,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
transformers = [
  "transformers>=4.40",
  "torch>=2.2",
]
ollama = [
  "ollama>=0.3.0",
]
langgraph = [
  "langgraph>=0.2.0",
  "langchain-core>=0.2.0",
]
serve = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "langserve>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/latentmesh/latentmesh"
Documentation = "https://github.com/latentmesh/latentmesh/tree/main/docs"
Repository = "https://github.com/latentmesh/latentmesh"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["latentmesh*"]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1"
testpaths = ["tests"]
