[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latentmesh"
version = "0.5.0"
description = "Multi-agent Latent Space Communication for LLMs"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Yash Ranjith", email = "yranjith@stanford.edu" },
    { name = "Hiroki Kimiwada", email = "kimiwada@stanford.edu" },
    { name = "William Peng", email = "wgpeng@stanford.edu" },
    { name = "Atharva Rao", email = "arao2007@stanford.edu" }
]

license = {text = "MIT"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch",
    "transformers",
    "accelerate",
    "langgraph",
    "langchain-core",
    "pygtrie",
    "pydantic",
]

[project.optional-dependencies]
server = [
    "fastapi",
    "uvicorn[standard]",
]
disk = [
    "diskcache",
]
dev = [
    "pytest",
    "datasets",
    "matplotlib",
    "scipy",
]
all = [
    "latentmesh[server,disk,dev]",
]

[tool.setuptools]
packages = ["latentmesh"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
