[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latentmesh"
version = "0.5.1"
description = "Multi-agent Latent Space Communication for LLMs"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Yash Ranjith", email = "yranjith@stanford.edu" },
    { name = "Hiroki Kimiwada", email = "kimiwada@stanford.edu" },
    { name = "William Peng", email = "wgpeng@stanford.edu" },
    { name = "Atharva Rao", email = "arao2007@stanford.edu" }
]

license = {text = "MIT"}

dependencies = [
    "torch",
    "transformers",
    "accelerate",
    "langgraph",
    "langchain-core",
    "pygtrie",
    "pydantic",
]

[project.optional-dependencies]
server = [
    "fastapi",
    "uvicorn[standard]",
]
disk = [
    "diskcache",
]
dev = [
    "pytest",
    "datasets",
    "matplotlib",
    "scipy",
]
all = [
    "latentmesh[server,disk,dev]",
]

[tool.setuptools]
packages = ["latentmesh"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
